--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -17,8 +17,15 @@ COPY ./requirements.txt /requirements.txt
 # pip install python deps from requirements.txt on the resin.io build server
 RUN pip install -r /requirements.txt
 
+#install gip 
+#todo using wiringPi or move it to requirements.txt
+RUN pip install -r RPi.GPIO
+
 # This will copy all files in our root to the working  directory in the container
 COPY . ./
+
+#RUN cd /root && git clone https://github.com/WiringPi/WiringPi.git && cd WiringPi && ./buildf
+
 
 # switch on systemd init system in container
 ENV INITSYSTEM on
