--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -19,7 +19,7 @@ RUN pip install -r /requirements.txt
 
 #install gip 
 #todo using wiringPi or move it to requirements.txt
-RUN pip install -r RPi.GPIO
+RUN pip install RPi.GPIO
 
 # This will copy all files in our root to the working  directory in the container
 COPY . ./
